# matrirc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: nightly.yml  release.yml
irssi/: matrirc.pl.in
src/: bridge.rs  config.rs  main.rs  matrix.rs
src/irc/: conn.rs
weechat/: matrirc_msgid.py
